# pttavm_python

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
examples/: barcode_check_example.py  category_example.py  product_activation_example.py  product_example.py  product_update_example.py  stock_bulk_example.py  stock_example.py  stock_list_example.py  stock_update_example.py  version_example.py
src/pttavm/: __init__.py  client.py  py.typed
src/pttavm/models/: barcode.py  category.py  product.py  product_update.py  stock.py  validation_rules.py  variant.py
src/pttavm/services/: base_service.py  category_service.py  product_service.py  stock_service.py  version_service.py
src/pttavm/utils/: archiver.py  version.py
tests/: test_category.py  test_client.py  test_product.py  test_stock.py  test_version.py
