[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pttavm"
version = "0.1.3"
description = "A client for interacting with PTT AVM API"
readme = "README.md"
authors = [{name = "Selim Kosgen", email = "selimkosgen1999@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "xmltodict",
    "python-dateutil",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]