[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pttavm-python"
version = "0.1.4"
description = "A client for interacting with PTT AVM API"
readme = "README.md"
authors = [{name = "Selim Kosgen", email = "selimkosgen1999@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "xmltodict>=0.12.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=0.15.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.package-data]
pttavm = ["py.typed"]